fix subfolder with same name as parent not retreating on parent breadcrumb click; align current path breadcrumbs with main contents
AdventurousGui/updates-OCR#34

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -84,6 +84,7 @@ body {
 .MuiBox-root .pathButton {
     text-transform: none;
     text-decoration: underline;
+    min-width: 0;
 }
 
 .MuiBox-root .pathButton:disabled {  /* overrides transparency from Mui-disabled */
